Imported upstream release 5.1.12.